Fix logo overflow

--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -417,6 +417,12 @@
 
     .logoMobile {
         width: auto;
+
+        & > svg,  & > svg > *{
+            width: 100%;
+            height: 100%;
+            overflow: visible;
+        }
     }
 
     .logoMobileWrapper {        
